--- a/MdeicalStoreApplication/MedicalStore/Views/Account/Login.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model MedicalStore.Models.RegisterViewModel 
 @{
     Layout = null;
 }
@@ -15,28 +15,26 @@
 <body>
     <div class="container">
         <div class="row cll">
-             <a href="index.html"> <i class="fas fa-arrow-circle-left"></i></a> 
+            <a href="index.html"> <i class="fas fa-arrow-circle-left"></i></a>
             <div class="main-d">
                 <div class="login col-md-6 col-xs-12 col-lg-8">
-                    <form action="#" method="GET">
-                        <input type="text"
-                               name="user"
-                               id="log-user"
-                               placeholder="username"
-                               autocomplete="off"
-                               required />
-                        <input type="password"
-                               name="pass"
-                               id="log-pass"
-                               placeholder="password"
-                               autocomplete="off"
-                               required />
-                        <input type="submit" name="login" id="log" value="LOGIN" />
-                    </form>
+                    @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
+
+                        @Html.EditorFor(i => i.UserName, additionalViewData: new { htmlAttributes = new { name = "user", id = "log-user", placeholder = "User Name" } })
+                        @Html.ValidationMessageFor(i => i.UserName, "", htmlAttributes: new { id = "erremail" })
+
+                        @Html.EditorFor(i => i.Password, additionalViewData: new { htmlAttributes = new { name = "pass", id = "log-pass", placeholder = "Password" } })
+                        @Html.ValidationMessageFor(i => i.Password, "", htmlAttributes: new { id = "errpass" })
+
+                        <input type="submit" name="ok" value="Login" class="btn" />
+
+                    }
+
                     <div class="lo">
                         <p class="text-center" style="color: #0984e3;">
                             Don't Have an Account ?
-                            <a href="#" onclick="log()"> Register Now</a>
+                            @Html.ActionLink("Register Now", "Login", "Account")
                         </p>
                     </div>
                 </div>
@@ -52,6 +50,9 @@
 
     </div>
 
-            <script src="~/Scripts/jquery-3.5.1.min.js"></script>
+    <script src="~/Scripts/jquery-3.5.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 </body>
 </html>
