--- a/MdeicalStoreApplication/MedicalStore/Views/Account/Register.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Account/Register.cshtml
@@ -16,25 +16,25 @@
 </head>
 <body>
     <div>
-        <body>
             <div class="container">
                 <div class="row cll">
-                     @*<a href="~/Views/Home/Index.cshtml"> <i class="fas fa-arrow-circle-left"></i></a>*@ 
+                    @*<a href="~/Views/Home/Index.cshtml"> <i class="fas fa-arrow-circle-left"></i></a>*@
                     <div class="main-d">
                         <div class="main col-md-6 col-xs-12">
                             <h1 class="text-center he">REGISTER</h1>
-                            @using (Ajax.BeginForm("Login", "Account", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "", InsertionMode = InsertionMode.ReplaceWith }))
+                            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { enctype = "multipart/form-data" }))
                             {
-                                @Html.EditorFor(i => i.Email, additionalViewData: new { htmlAttributes = new { name = "mail", id = "email", placeholder = "email" } })
+
+                                @Html.EditorFor(i => i.Email, additionalViewData: new { htmlAttributes = new { name = "mail", id = "email", placeholder = "Email" } })
                                 @Html.ValidationMessageFor(i => i.Email, "", htmlAttributes: new { id = "erremail" })
 
-                                @Html.EditorFor(i => i.UserName, additionalViewData: new { htmlAttributes = new { name = "user", id = "username", placeholder = "username" } })
+                                @Html.EditorFor(i => i.UserName, additionalViewData: new { htmlAttributes = new { name = "user", id = "username", placeholder = "Use rname" } })
                                 @Html.ValidationMessageFor(i => i.UserName, "", htmlAttributes: new { id = "errname" })
 
-                                @Html.EditorFor(i => i.Password, additionalViewData: new { htmlAttributes = new { name = "pass", id = "password", placeholder = "password" } })
+                                @Html.EditorFor(i => i.Password, additionalViewData: new { htmlAttributes = new { name = "pass", id = "password", placeholder = "Password" } })
                                 @Html.ValidationMessageFor(i => i.Password, "", htmlAttributes: new { id = "errpass" })
 
-                                @Html.EditorFor(i => i.ConfirmPassword, additionalViewData: new { htmlAttributes = new { name = "con", id = "conferm", placeholder = "confirm password" } })
+                                @Html.EditorFor(i => i.ConfirmPassword, additionalViewData: new { htmlAttributes = new { name = "con", id = "conferm", placeholder = "Confirm password" } })
                                 @Html.ValidationMessageFor(i => i.ConfirmPassword, "", htmlAttributes: new { id = "errpass1" })
 
                                 <input type="submit" name="ok" value="REGISTER" class="btn" />
@@ -45,11 +45,11 @@
                                 <p class="text-center login22">
                                     Don't Have an Account ?
                                     @*<a href="#" onclick="reg()"> Login Now</a>*@
-                                    @Html.ActionLink("Login" ,"Login" ,"Account")
+                                    @Html.ActionLink("Login now", "Login", "Account")
                                 </p>
                             </div>
                         </div>
-         
+
                     </div>
                     <div class="col-xs-12 main-copy">
                         <p class="copy">
@@ -61,6 +61,9 @@
             </div>
     </div>
     <script src="~/Scripts/jquery-3.5.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 </body>
 
 </html>
