--- a/MdeicalStoreApplication/MedicalStore/Views/Home/Index.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Home/Index.cshtml
@@ -4,4 +4,386 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<!-- Banner -->
+
+<div class="banner" style="border-bottom: 3px solid cornflowerblue;">
+    <div class="banner_background"
+         style="background-image: url(images/banner_background.jpg);"></div>
+    <div class="container fill_height">
+        <div class="row fill_height">
+            <div class="banner_product_image">
+                <img src="images/banner_product.png" alt="" style="width: 35%; float: right;" />
+            </div>
+            <div class="col-lg-5 offset-lg-4 fill_height">
+                <div class="banner_content">
+                    <h1 class="banner_text">blood pressure device</h1>
+                    <div class="banner_price">778 LE</div>
+                    <div class="banner_product_name">beurer</div>
+                    <div class="button banner_button"><a href="#">Shop Now</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Characteristics -->
+
+<div class="characteristics" style="border-bottom: 3px solid cornflowerblue;">
+    <div class="container">
+        <div class="row">
+            <!-- Char. Item -->
+            <div class="col-lg-3 col-md-6 char_col">
+                <div class="char_item d-flex flex-row align-items-center justify-content-start">
+                    <div class="char_icon">
+                        <img src="images/char_1.png" alt="" />
+                    </div>
+                    <div class="char_content">
+                        <div class="char_title">Free Delivery</div>
+                        <div class="char_subtitle">from 50 LE</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Char. Item -->
+            <div class="col-lg-3 col-md-6 char_col">
+                <div class="char_item d-flex flex-row align-items-center justify-content-start">
+                    <div class="char_icon">
+                        <img src="images/char_2.png" alt="" />
+                    </div>
+                    <div class="char_content">
+                        <div class="char_title">Free Delivery</div>
+                        <div class="char_subtitle">from 50 LE</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Char. Item -->
+            <div class="col-lg-3 col-md-6 char_col">
+                <div class="char_item d-flex flex-row align-items-center justify-content-start">
+                    <div class="char_icon">
+                        <img src="images/char_3.png" alt="" />
+                    </div>
+                    <div class="char_content">
+                        <div class="char_title">Free Delivery</div>
+                        <div class="char_subtitle">from 50 LE</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Char. Item -->
+            <div class="col-lg-3 col-md-6 char_col">
+                <div class="char_item d-flex flex-row align-items-center justify-content-start">
+                    <div class="char_icon">
+                        <img src="images/char_4.png" alt="" />
+                    </div>
+                    <div class="char_content">
+                        <div class="char_title">Free Delivery</div>
+                        <div class="char_subtitle">from 50 LE</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Banner -->
+
+<div class="banner_2" style="border-bottom: 3px solid cornflowerblue;">
+    <div class="banner_2_background"
+         style="background-image: url(images/banner_2_background.jpg);"></div>
+    <div class="banner_2_container">
+        <div class="banner_2_dots"></div>
+        <!-- Banner 2 Slider -->
+
+        <div class="owl-carousel owl-theme banner_2_slider">
+            <!-- Banner 2 Slider Item -->
+            <div class="owl-item">
+                <div class="banner_2_item">
+                    <div class="container fill_height">
+                        <div class="row fill_height">
+                            <div class="col-lg-4 col-md-6 fill_height">
+                                <div class="banner_2_content">
+                                    <div class="banner_2_category">Laptops</div>
+                                    <div class="banner_2_title">Body scale</div>
+                                    <div class="banner_2_text">
+                                        Black and white personal scale illustration,
+                                        weight loss fat tissue measurement scales
+                                    </div>
+                                    <div class="rating_r rating_r_4 banner_2_rating">
+                                        <i></i><i></i><i></i><i></i><i></i>
+                                    </div>
+                                    <div class="button banner_2_button">
+                                        <a href="#">Explore</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 col-md-6 fill_height">
+                                <div class="banner_2_image_container">
+                                    <div class="banner_2_image">
+                                        <img src="images/banner_2_product.png" alt="" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Banner 2 Slider Item -->
+            <div class="owl-item">
+                <div class="banner_2_item">
+                    <div class="container fill_height">
+                        <div class="row fill_height">
+                            <div class="col-lg-4 col-md-6 fill_height">
+                                <div class="banner_2_content">
+                                    <div class="banner_2_category">Laptops</div>
+                                    <div class="banner_2_title">MacBook Air 13</div>
+                                    <div class="banner_2_text">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing
+                                        elit. Maecenas fermentum laoreet.
+                                    </div>
+                                    <div class="rating_r rating_r_4 banner_2_rating">
+                                        <i></i><i></i><i></i><i></i><i></i>
+                                    </div>
+                                    <div class="button banner_2_button">
+                                        <a href="#">Explore</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 col-md-6 fill_height">
+                                <div class="banner_2_image_container">
+                                    <div class="banner_2_image">
+                                        <img src="images/banner_2_product.png" alt="" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Banner 2 Slider Item -->
+            <div class="owl-item">
+                <div class="banner_2_item">
+                    <div class="container fill_height">
+                        <div class="row fill_height">
+                            <div class="col-lg-4 col-md-6 fill_height">
+                                <div class="banner_2_content">
+                                    <div class="banner_2_category">Laptops</div>
+                                    <div class="banner_2_title">MacBook Air 13</div>
+                                    <div class="banner_2_text">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing
+                                        elit. Maecenas fermentum laoreet.
+                                    </div>
+                                    <div class="rating_r rating_r_4 banner_2_rating">
+                                        <i></i><i></i><i></i><i></i><i></i>
+                                    </div>
+                                    <div class="button banner_2_button">
+                                        <a href="#">Explore</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 col-md-6 fill_height">
+                                <div class="banner_2_image_container">
+                                    <div class="banner_2_image">
+                                        <img src="images/banner_2_product.png" alt="" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Trends -->
+
+<div class="trends" style="border-bottom: 3px solid cornflowerblue;">
+    <div class="trends_background"
+         style="background-image: url(images/trends_background.jpg);"></div>
+    <div class="trends_overlay"></div>
+    <div class="container">
+        <div class="row">
+            <!-- Trends Content -->
+            <div class="col-lg-3">
+                <div class="trends_container">
+                    <h2 class="trends_title">New in Medical Store</h2>
+                    <div class="trends_text">
+                        <p>
+                            We have the latest devices at excellent prices
+                        </p>
+                    </div>
+                    <div class="trends_slider_nav">
+                        <div class="trends_prev trends_nav">
+                            <i class="fas fa-angle-left ml-auto"></i>
+                        </div>
+                        <div class="trends_next trends_nav">
+                            <i class="fas fa-angle-right ml-auto"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Trends Slider -->
+            <div class="col-lg-9">
+                <div class="trends_slider_container">
+                    <!-- Trends Slider -->
+
+                    <div class="owl-carousel owl-theme trends_slider">
+                        <!-- Trends Slider Item -->
+                        <div class="owl-item">
+                            <div class="trends_item is_new">
+                                <div class="trends_image d-flex flex-column align-items-center justify-content-center">
+                                    <img src="images/trends_1.png" alt="" />
+                                </div>
+                                <div class="trends_content">
+                                    <div class="trends_category">
+                                        <a href="#">Smartphones</a>
+                                    </div>
+                                    <div class="trends_info clearfix">
+                                        <div class="trends_name">
+                                            <a href="product.html">Jump White</a>
+                                        </div>
+                                        <div class="trends_price">$379</div>
+                                    </div>
+                                </div>
+                                <ul class="trends_marks">
+                                    <li class="trends_mark trends_discount">-25%</li>
+                                    <li class="trends_mark trends_new">new</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Trends Slider Item -->
+                        <div class="owl-item">
+                            <div class="trends_item">
+                                <div class="trends_image d-flex flex-column align-items-center justify-content-center">
+                                    <img src="images/trends_2.png" alt="" />
+                                </div>
+                                <div class="trends_content">
+                                    <div class="trends_category">
+                                        <a href="#">Smartphones</a>
+                                    </div>
+                                    <div class="trends_info clearfix">
+                                        <div class="trends_name">
+                                            <a href="product.html">Samsung Charm...</a>
+                                        </div>
+                                        <div class="trends_price">$379</div>
+                                    </div>
+                                </div>
+                                <ul class="trends_marks">
+                                    <li class="trends_mark trends_discount">-25%</li>
+                                    <li class="trends_mark trends_new">new</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Trends Slider Item -->
+                        <div class="owl-item">
+                            <div class="trends_item is_new">
+                                <div class="trends_image d-flex flex-column align-items-center justify-content-center">
+                                    <img src="images/trends_3.png" alt="" />
+                                </div>
+                                <div class="trends_content">
+                                    <div class="trends_category">
+                                        <a href="#">Smartphones</a>
+                                    </div>
+                                    <div class="trends_info clearfix">
+                                        <div class="trends_name">
+                                            <a href="product.html">face masks</a>
+                                        </div>
+                                        <div class="trends_price">$379</div>
+                                    </div>
+                                </div>
+                                <ul class="trends_marks">
+                                    <li class="trends_mark trends_discount">-25%</li>
+                                    <li class="trends_mark trends_new">new</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Trends Slider Item -->
+                        <div class="owl-item">
+                            <div class="trends_item is_new">
+                                <div class="trends_image d-flex flex-column align-items-center justify-content-center">
+                                    <img src="images/trends_1.png" alt="" />
+                                </div>
+                                <div class="trends_content">
+                                    <div class="trends_category">
+                                        <a href="#">Smartphones</a>
+                                    </div>
+                                    <div class="trends_info clearfix">
+                                        <div class="trends_name">
+                                            <a href="product.html">Jump White</a>
+                                        </div>
+                                        <div class="trends_price">$379</div>
+                                    </div>
+                                </div>
+                                <ul class="trends_marks">
+                                    <li class="trends_mark trends_discount">-25%</li>
+                                    <li class="trends_mark trends_new">new</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Trends Slider Item -->
+                        <div class="owl-item">
+                            <div class="trends_item">
+                                <div class="trends_image d-flex flex-column align-items-center justify-content-center">
+                                    <img src="images/trends_2.png" alt="" />
+                                </div>
+                                <div class="trends_content">
+                                    <div class="trends_category">
+                                        <a href="#">Smartphones</a>
+                                    </div>
+                                    <div class="trends_info clearfix">
+                                        <div class="trends_name">
+                                            <a href="product.html">Jump White</a>
+                                        </div>
+                                        <div class="trends_price">$379</div>
+                                    </div>
+                                </div>
+                                <ul class="trends_marks">
+                                    <li class="trends_mark trends_discount">-25%</li>
+                                    <li class="trends_mark trends_new">new</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- Trends Slider Item -->
+                        <div class="owl-item">
+                            <div class="trends_item is_new">
+                                <div class="trends_image d-flex flex-column align-items-center justify-content-center">
+                                    <img src="images/trends_3.png" alt="" />
+                                </div>
+                                <div class="trends_content">
+                                    <div class="trends_category">
+                                        <a href="#">Smartphones</a>
+                                    </div>
+                                    <div class="trends_info clearfix">
+                                        <div class="trends_name">
+                                            <a href="product.html">face masks</a>
+                                        </div>
+                                        <div class="trends_price">$379</div>
+                                    </div>
+                                </div>
+                                <ul class="trends_marks">
+                                    <li class="trends_mark trends_discount">-25%</li>
+                                    <li class="trends_mark trends_new">new</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
