-Add Admin Dashboard

--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -93,26 +93,10 @@
                                                    required="required"
                                                    class="header_search_input"
                                                    placeholder="Search for products..." />
-                                            <div class="custom_dropdown">
-                                                <div class="custom_dropdown_list">
-                                                    <span class="custom_dropdown_placeholder clc">All Categories</span>
-                                                    <i class="fas fa-chevron-down"></i>
-                                                    <ul class="custom_list clc">
-                                                        <li>
-                                                            <a class="clc" href="#">All Categories</a>
-                                                        </li>
-                                                        <li><a class="clc" href="#">Computers</a></li>
-                                                        <li><a class="clc" href="#">Laptops</a></li>
-                                                        <li><a class="clc" href="#">Cameras</a></li>
-                                                        <li><a class="clc" href="#">Hardware</a></li>
-                                                        <li><a class="clc" href="#">Smartphones</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
                                             <button type="submit"
                                                     class="header_search_button trans_300"
                                                     value="Submit">
-                                                <img src="images/search.png" alt="" />
+                                                <i class="fas fa-search" style="color:#fff"></i>
                                             </button>
                                         </form>
                                     </div>
@@ -133,7 +117,7 @@
                                         </div>
                                         <div class="cart_content">
                                             <div class="cart_text"><a href="#">Cart</a></div>
-                                            <div class="cart_price">0</div>
+                                            @*<div class="cart_price">0</div>*@
                                         </div>
                                     </div>
                                 </div>
