--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/AdminDashBoard.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/AdminDashBoard.cshtml
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin</title>
-    <link href="~/Content/admin.css" rel="stylesheet" />
+    <link href="~/Content/Custom/admin.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 
 </head>
@@ -44,28 +44,12 @@
                 @*<input type="checkbox" name="" id="">*@
                 @*<label for="checkbox">I Agree To The Terms</label>*@
                 <button class="btn-1"> Add</button>
-
             </div>
 
             <div class="catig">
-                <div class="desc-cat text-center">
-                    <h1>Upload New Products</h1>
-                </div>
-                <form action="#">
-                    <input type="file" id="files" multiple />
-                    <label for="cat-name">Name</label>
-                    <input type="text" name="cat-name" id="" autocomplete="off">
-                    <label for="">Price</label>
-                    <input type="number" value="0" min="0" name="" id="">
-                    <label for="">Quantity</label>
-                    <input type="number" value="0" min="0" name="" id="">
-                    <textarea name="" id="" cols="40" rows="10"></textarea>
-                    <button class="btn-0">Send</button>
-                    <button class="btn-2"> Edit</button>
-                    <button class="btn-3"> Delete</button>
-                </form>
-
+                @Html.Partial("Products")
             </div>
+
             <!-- categores -->
             <div class="cat">
                 <div class="desc-cat text-center">
@@ -83,7 +67,7 @@
     <!-- script files -->
     <script src="~/Scripts/jquery-3.5.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/admin.js"></script>
+    <script src="~/Scripts/Custom/admin.js"></script>
 </body>
 </html>
 
