--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/Products.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/Products.cshtml
@@ -11,7 +11,7 @@
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <input type="file" name="ImageFile" id="ImageFile" multiple />
+    <input type="file" name="prodImg" id="prodImg" multiple />
 
     @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
 
@@ -24,8 +24,11 @@
 
     @Html.LabelFor(model => model.Price)
     @Html.EditorFor(model => model.Price, new { htmlAttributes = new { value = "0", min = "0" } })
-
     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+
+    @Html.LabelFor(model => model.CategoryId)
+    @Html.EditorFor(model => model.CategoryId, new { htmlAttributes = new { value = "0", min = "0" } })
+    @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
 
 
     @Html.LabelFor(model => model.QuantityInStock, "Quantity")
@@ -35,9 +38,9 @@
 
 
     @Html.TextAreaFor(model => model.Description, new { rows = 10, cols = 50 })
+    <input type="submit" value="Send"  class="btn-0" />
 
-
-    <button class="btn-0">Send</button>
+    @*<button class="btn-0">Send</button>*@
     <button class="btn-2"> Edit</button>
     <button class="btn-3"> Delete</button>
 }
