--- a/MdeicalStoreApplication/MedicalStore/Content/Custom/admin.css
+++ b/MdeicalStoreApplication/MedicalStore/Content/Custom/admin.css
@@ -242,6 +242,18 @@ label {
             background: #ff7675;
         }
 
+input:last-child {
+    width: 180px;
+    height: 40px;
+    color: #fff;
+    border: none;
+    margin-right: 20px;
+    letter-spacing: 1.5px;
+    border-radius: 10px;
+    font-weight: bold;
+    transition: all .5s ease-in-out;
+}
+
     .cat button, .catig button {
         width: 180px;
         height: 40px;
