--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -182,14 +182,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="page_menu_content">
-                                <div class="page_menu_search">
-                                    <form action="#">
-                                        <input type="search"
-                                               required="required"
-                                               class="page_menu_search_input"
-                                               placeholder="Search for products..." />
-                                    </form>
-                                </div>
+                                @Html.Action("Search" ,"Product")
                                 <ul class="page_menu_nav">
                                     <li class="page_menu_item">
                                         <a href="#">Home</a>
