--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -16,6 +16,9 @@
     <link href="~/Content/main_styles.css" rel="stylesheet" />
     <link href="~/Content/responsive.css" rel="stylesheet" />
     <link href="~/Content/all.css" rel="stylesheet" />
+    <link href="~/Content/jquery-ui.css" rel="stylesheet" />
+    <link href="~/Content/shop_styles.css" rel="stylesheet" />
+    <link href="~/Content/shop_responsive.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -107,7 +110,7 @@
                         <!-- Wishlist -->
                         <div class="col-lg-4 col-9 order-lg-3 order-2 text-lg-left text-right">
                             <div class="wishlist_cart d-flex flex-row align-items-center justify-content-end">
-                               
+
                                 <!-- Cart -->
                                 <div class="cart">
                                     <div class="cart_container d-flex flex-row align-items-center justify-content-end">
@@ -146,7 +149,8 @@
                                             <a href="#">Home</a>
                                         </li>
                                         <li class="hassubs">
-                                            <a href="#">Shop</a>
+                                            @Html.ActionLink("Shop", "Shop", "Shop")
+                                            @*<a href="#">Shop</a>*@
                                         </li>
                                         <li class="hassubs">
                                             <a href="#">About</a>
@@ -182,7 +186,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="page_menu_content">
-                                @Html.Action("Search" ,"Product")
+                                @Html.Action("Search", "Product")
                                 <ul class="page_menu_nav">
                                     <li class="page_menu_item">
                                         <a href="#">Home</a>
@@ -338,6 +342,10 @@
     <script src="~/Scripts/owl.carousel.js"></script>
     <script src="~/Scripts/slick.js"></script>
     <script src="~/Scripts/jquery.easing.1.3.js"></script>
+    <script src="~/Scripts/isotope.pkgd.min.js"></script>
+    <script src="~/Scripts/jquery-ui.js"></script>
+    <script src="~/Scripts/shop_custom.js"></script>
+    <script src="~/Scripts/parallax.min.js"></script>
     <script src="~/Scripts/custom.js"></script>
 </body>
 </html>
