-Add Shop Controller & Product details Design

--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/AdminDashBoard.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/AdminDashBoard.cshtml
@@ -47,7 +47,7 @@
             </div>
 
             <div class="catig">
-                @Html.Partial("Products")
+                @Html.Action("Products" ,"Admin")
             </div>
 
             <!-- categores -->
