--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/Products.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/Products.cshtml
@@ -26,24 +26,26 @@
     @Html.EditorFor(model => model.Price, new { htmlAttributes = new { value = "0", min = "0" } })
     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
 
-    @Html.LabelFor(model => model.CategoryId)
-    @Html.EditorFor(model => model.CategoryId, new { htmlAttributes = new { value = "0", min = "0" } })
-    @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
 
 
     @Html.LabelFor(model => model.QuantityInStock, "Quantity")
     @Html.EditorFor(model => model.QuantityInStock, new { htmlAttributes = new { value = "10", min = "0" } })
-
     @Html.ValidationMessageFor(model => model.QuantityInStock, "", new { @class = "text-danger" })
+
+    <label>Category Name</label>
+    @Html.DropDownListFor(model => model.CategoryId, ViewBag.cats as SelectList)
 
 
     @Html.TextAreaFor(model => model.Description, new { rows = 10, cols = 50 })
-    <input type="submit" value="Send"  class="btn-0" />
+    <input type="submit" value="Send" class="btn-0" />
 
     @*<button class="btn-0">Send</button>*@
     <button class="btn-2"> Edit</button>
     <button class="btn-3"> Delete</button>
 }
+
+
+
 
 
 
