--- a/MdeicalStoreApplication/MedicalStore/Views/Shop/Shop.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shop/Shop.cshtml
@@ -36,23 +36,23 @@
 
     <div class="product_grid">
         <div class="product_grid_border"></div>
-
-        @foreach (var item in Model)
-        {
-            <!-- Product Item -->
-            <div class="product_item">
-                <a href="@Url.Action("ProductDetails","Shop",routeValues:new { id = item.Id})">
-                    <div class="over-v"><i class="fas fa-eye"> </i></div>
-                </a>
-                <div class="product_border"></div>
-                <div class="product_image d-flex flex-column align-items-center justify-content-center"><img src="data:image/png;base64,@item.Image" alt=""></div>
-                <div class="product_content">
-                    <div class="product_price">@item.Price LE</div>
-                    <div class="product_name"><div><a href="#" tabindex="0">@item.Name</a></div></div>
+        <div class="row">
+            @foreach (var item in Model)
+            {
+                <!-- Product Item -->
+                <div class="product_item" style="margin-left:10px">
+                    <a href="@Url.Action("ProductDetails","Shop",routeValues:new { id = item.Id})">
+                        <div class="over-v"><i class="fas fa-eye"> </i></div>
+                    </a>
+                    <div class="product_border"></div>
+                    <div class="product_image d-flex flex-column align-items-center justify-content-center"><img src="data:image/png;base64,@item.Image" alt=""></div>
+                    <div class="product_content">
+                        <div class="product_price">@item.Price LE</div>
+                        <div class="product_name"><div><a href="#" tabindex="0">@item.Name</a></div></div>
+                    </div>
                 </div>
-            </div>
-        }
-
+            }
+        </div>
 
     </div>
 
