--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/AdminDashBoard.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/AdminDashBoard.cshtml
@@ -17,7 +17,6 @@
 <body>
     <section class="admin-side text-center">
         <div class="one x">
-            <i class="fas fa-circle"></i>
             <p class="name-admin">@MedicalStore.Helpers.AuthorizationHelper.GetUserInfo().UserName</p>
         </div>
         <span class="hr"></span>
@@ -31,6 +30,9 @@
         <div class="three x">
             <h3 class="categorie-add">Categores</h3>
         </div>
+        <ul>
+            <li><button class="logout">Logout</button></li>
+        </ul>
     </section>
     <!-- //////// -->
     <section class="content-side">
