--- a/MdeicalStoreApplication/MedicalStore/Content/shop_styles.css
+++ b/MdeicalStoreApplication/MedicalStore/Content/shop_styles.css
@@ -1492,7 +1492,7 @@ select {
     .product_image img {
         display: block;
         position: relative;
-        max-width: 90%;
+        max-width: 90% !important;
         height: 120px;
     }
 
