--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -21,6 +21,8 @@
     <link href="~/Content/shop_responsive.css" rel="stylesheet" />
     <link href="~/Content/product_styles.css" rel="stylesheet" />
     <link href="~/Content/product_responsive.css" rel="stylesheet" />
+    <link href="~/Content/cart_styles.css" rel="stylesheet" />
+    <link href="~/Content/cart_responsive.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -121,7 +123,7 @@
                                             <div class="cart_count"><span>0</span></div>
                                         </div>
                                         <div class="cart_content">
-                                            <div class="cart_text"><a href="#">Cart</a></div>
+                                            <div class="cart_text">@*<a href="#">Cart</a>*@@Html.ActionLink("Cart", "CartContent", "Cart")</div>
                                             @*<div class="cart_price">0</div>*@
                                         </div>
                                     </div>
@@ -337,6 +339,8 @@
     <script src="~/Scripts/jquery-3.5.1.min.js"></script>
     <script src="~/Scripts/popper.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/TweenMax.min.js"></script>
     <script src="~/Scripts/TimelineMax.min.js"></script>
     <script src="~/Scripts/ScrollMagic.min.js"></script>
@@ -349,6 +353,10 @@
     <script src="~/Scripts/jquery-ui.js"></script>
     <script src="~/Scripts/shop_custom.js"></script>
     <script src="~/Scripts/parallax.min.js"></script>
+    <script src="~/Scripts/product_custom.js"></script>
     <script src="~/Scripts/custom.js"></script>
+    <script src="~/Scripts/cart_custom.js"></script>
 </body>
+
+@RenderSection("Scripts" ,false)
 </html>
