--- a/MdeicalStoreApplication/MedicalStore/Views/Shop/Shop.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shop/Shop.cshtml
@@ -48,7 +48,7 @@
                     <div class="product_image d-flex flex-column align-items-center justify-content-center"><img src="data:image/png;base64,@item.Image" alt=""></div>
                     <div class="product_content">
                         <div class="product_price">@item.Price LE</div>
-                        <div class="product_name"><div><a href="#" tabindex="0">@item.Name</a></div></div>
+                        <div class="product_name"><div><a tabindex="0">@item.Name</a></div></div>
                     </div>
                 </div>
             }
