--- a/MdeicalStoreApplication/MedicalStore/Views/Cart/CartContent.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Cart/CartContent.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "CartContent";
     var cartProds = ViewBag.cartProducts as IEnumerable<ProductViewModel>;
+    decimal orderTotal=0;
 }
 
 <!-- Cart -->
@@ -34,14 +35,15 @@
                                         </div>
                                         <div class="cart_item_price cart_info_col">
                                             <div class="cart_item_title">Price</div>
-                                            <div class="cart_item_text">@P.Price LE</div>
+                                            <div class="cart_item_text">@P.Price.ToString("0.#####") LE</div>
                                         </div>
                                         <div class="cart_item_total cart_info_col">
                                             <div class="cart_item_title">Total</div>
-                                            <div class="cart_item_text">@P.Price*@item.Quantity</div>
+                                            <div class="cart_item_text">@((P.Price * item.Quantity).ToString("0.#####")) LE</div>
                                         </div>
                                     </div>
                                 </li>
+                                orderTotal += P.Price * item.Quantity;
                             }
                         </ul>
                     </div>
@@ -50,7 +52,7 @@
                     <div class="order_total">
                         <div class="order_total_content text-md-right">
                             <div class="order_total_title">Order Total:</div>
-                            <div class="order_total_amount">	0</div>
+                            <div class="order_total_amount">@orderTotal.ToString("0.#####") LE</div>
                         </div>
                     </div>
 
