--- a/MdeicalStoreApplication/MedicalStore/Views/Admin/Categories.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Admin/Categories.cshtml
@@ -3,10 +3,17 @@
 <div class="desc-cat text-center">
     <h1>Upload New Categores</h1>
 </div>
-@using(Html.BeginForm(""))
-<form action="#" class="for">
+@using (Html.BeginForm("AddCategory", "Categories", FormMethod.Post))
+{
+    @Html.TextBoxFor(c => c.Name, htmlAttributes: new { name = "cat" })
+    @Html.ValidationMessageFor(c => c.Name, "", htmlAttributes: new { @class = "text-danger" })
+
+    <button type="submit" class="btn-0">Add</button>
+}
+@*<form action="#" class="for">
     <input type="text" name="cat">
     <button class="btn-0">Send</button>
     <button class="btn-2"> Edit</button>
     <button class="btn-3"> Delete</button>
-</form>
+</form>*@
+
