--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <link href="~/Content/product_responsive.css" rel="stylesheet" />
     <link href="~/Content/cart_styles.css" rel="stylesheet" />
     <link href="~/Content/cart_responsive.css" rel="stylesheet" />
+    <link href="~/Content/Order.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -117,7 +118,7 @@
                                                 <div class="cart_text">@Html.ActionLink("Cart", "CartContent", "Cart")</div>
                                             </div>
                                             <div class="cart_content">
-                                                <div class="cart_text">@Html.ActionLink("Orders", "OrdersContent", "Orders")</div>
+                                                <div class="cart_text">@Html.ActionLink("Orders", "OrdersContent", "Order")</div>
                                             </div>
                                         </div>
                                     </div>
