--- a/MdeicalStoreApplication/MedicalStore/Views/Order/OrderDetails.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Order/OrderDetails.cshtml
@@ -1,32 +1,30 @@
-﻿@model IEnumerable<CartViewModel>
+﻿@model IEnumerable<OrderItemsViewModel>
 @{
-    ViewBag.Title = "CartContent";
-    var cartProds = ViewBag.cartProducts as IEnumerable<ProductViewModel>;
-    decimal orderTotal=0;
+    ViewBag.Title = "OrderDetails";
+    var orderProds = ViewBag.orderProds as IEnumerable<ProductViewModel>;
+    decimal orderTotal = 0;
 }
+<!-- Order details -->
 
-<!-- Cart -->
 <div class="cart_section" style="border-bottom: 3px solid rgb(48, 48, 241);">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 offset-lg-1">
                 <div class="cart_container">
-                    <div class="cart_title">Shopping Cart</div>
-
-
+                    <div class="cart_title">Order Details</div>
 
 
                     <div class="cart_items">
                         <ul class="cart_list">
                             @foreach (var item in Model)
-                                    {
-                                        var P = cartProds.SingleOrDefault(i => i.Id == item.ProductId);
-                                        <li class="cart_item clearfix">
-                                    <div class="cart_item_image"><img src="data:image/png;base64,@P.Image" alt=""></div>
+                            {
+                                var prod = orderProds.SingleOrDefault(ww => ww.Id == item.ProductId);
+                                <li class="cart_item clearfix">
+                                    <div class="cart_item_image"><img src="data:image/png;base64,@prod.Image" alt=""></div>
                                     <div class="cart_item_info d-flex flex-md-row flex-column justify-content-between">
                                         <div class="cart_item_name cart_info_col">
                                             <div class="cart_item_title">Name</div>
-                                            <div class="cart_item_text">@P.Name</div>
+                                            <div class="cart_item_text">@prod.Name</div>
                                         </div>
                                         <div class="cart_item_quantity cart_info_col">
                                             <div class="cart_item_title">Quantity</div>
@@ -35,15 +33,15 @@
                                         </div>
                                         <div class="cart_item_price cart_info_col">
                                             <div class="cart_item_title">Price</div>
-                                            <div class="cart_item_text">@P.Price.ToString("0.#####") LE</div>
+                                            <div class="cart_item_text">@prod.Price.ToString("0.#####") LE</div>
                                         </div>
                                         <div class="cart_item_total cart_info_col">
                                             <div class="cart_item_title">Total</div>
-                                            <div class="cart_item_text">@((P.Price * item.Quantity).ToString("0.#####")) LE</div>
+                                            <div class="cart_item_text">@((prod.Price * item.Quantity).ToString("0.#####")) LE</div>
                                         </div>
                                     </div>
                                 </li>
-                                orderTotal += P.Price * item.Quantity;
+                                orderTotal += (prod.Price * item.Quantity);
                             }
                         </ul>
                     </div>
@@ -51,14 +49,9 @@
                     <!-- Order Total -->
                     <div class="order_total">
                         <div class="order_total_content text-md-right">
-                            <div class="order_total_title">Total Price</div>
+                            <div class="order_total_title">Order Total:</div>
                             <div class="order_total_amount">@orderTotal.ToString("0.#####") LE</div>
                         </div>
-                    </div>
-
-                    <div class="cart_buttons">
-
-                        <button type="button" class="button cart_button_checkout" onclick="location.href='@Url.Action("OrderData" ,"Order")'">Confirm Order</button>
                     </div>
                 </div>
             </div>
